# debianBD

./: PLAN .md  README.md  Work and life PLAN by mounth.md
untitled/: CMakeLists.txt  main.cpp  stdafx.h
